# covidify

./: .gitignore  README.md  data_exploration.ipynb  data_prep.ipynb  data_prep.py  pipeline.sh  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
bridge/: bridge.py
builder/: builder.py
data/: README.md  lat_lng.csv  my_data.csv  updated_2020-01-30.csv  updated_2020-01-30.parquet.gzip
data/2020-01-30/: agg_data_2020-01-30.csv  agg_data_2020-01-30.parquet.gzip  new_confirmed_2020-01-30.csv
data/2020-03-03/: agg_data_2020-03-03.csv  agg_data_2020-03-03.parquet.gzip  trend_2020-03-03.csv
data/2020-03-04/: agg_data_2020-03-04.csv  agg_data_2020-03-04.parquet.gzip  trend_2020-03-04.csv
data/2020-03-05/: agg_data_2020-03-05.csv  agg_data_2020-03-05.parquet.gzip  trend_2020-03-05.csv
data/2020-04-08/: agg_data_2020-04-08.csv  agg_data_2020-04-08.parquet.gzip  forecast_2020-04-08.csv  log_2020-04-08.csv  trend_2020-04-08.csv
data/EXAMPLE-DATA-FOLDER/: agg_data_2020-01-31.csv  agg_data_2020-01-31.parquet.gzip  agg_data_2020-02-03.csv  agg_data_2020-02-03.parquet.gzip  agg_data_2020-02-07.csv  agg_data_2020-02-07.parquet.gzip  trend_2020-01-31.csv  trend_2020-02-03.csv  trend_2020-02-07.csv
data/EXAMPLE_DATA/: agg_data_2020-03-23.csv  agg_data_2020-03-23.parquet.gzip  agg_data_2020-03-25.csv  agg_data_2020-03-25.parquet.gzip  trend_2020-03-23.csv  trend_2020-03-25.csv
notebooks/: cumulative-forecast.ipynb  data_exploration.ipynb  data_prep-2.ipynb  data_prep-3.ipynb  data_prep-4.ipynb  data_prep.ipynb  geomapping.ipynb  interactive-map.ipynb  interactive_map.ipynb  log.ipynb  prediction.ipynb  time_series_analysis.ipynb  token.pickle
notebooks/data/2020-02-18/: agg_data_2020-02-18.csv  agg_data_2020-02-18.parquet.gzip  trend_2020-02-18.csv
reports/: README.md  report_2020-03-04.xlsx  report_2020-03-05.xlsx  report_2020-03-06.xlsx  report_2020-03-07.xlsx  report_2020-03-09.xlsx  report_2020-03-25.xlsx  report_2020-04-05.xlsx  report_2020-04-08.xlsx
resources/: README.md  info.txt
src/: README.md  credentials.json  data_exploration.py  data_prep.py  token.pickle
src/covidify/: README.md  __init__.py  aggregates.py  bridge.py  builder.py  builder_data_vis.py  chart_view.py  cli.py  config.py  country.py  covidify_data.py  covidify_prep.py  dataBridge.py  data_exploration.py  data_prep.py  data_visualization.py  db_sources.py  file_error_handler.py  forecast.py  iDataResource.py  list_countries.py  new_data_prep.py  output_destination.py  output_root.py  pipeline.sh  report.py  views.py
src/covidify/sources/: Director.py  __init__.py  agg_data_source.py  data_adapter.py  data_root.py  data_sources.py  data_sources_interface.py  github.py  githubSourceBuilder.py  github_JHU_Builder.py  github_proxy.py  source_prep.py  wiki.py  wikipedia.py
src/covidify/utils/: __init__.py  utils.py
strategy/: strategy.py
tableau/: .~analysis-workbook__3403.twbr  analysis-workbook.twb  trendline.twb
template_method/: template_method.py
tests/: test_cli.py  test_data_prep.py
