[metadata]
name = covidify
version = 0.1.5
description = covid-19 visualization and analysis
author = AaronWard
author-email = aaronward6210@gmail.com
license = MIT
url = https://github.com/AaronWard/covid-19-analysis
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
# zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
# install_requires =
#     click
#     matplotlib
#     pyarrow 
#     pandas
#     docopt 
#     GitPython 
#     pillow
#     tensorflow 
#     keras
#     fiona 
#     shapely 
#     pyproj 
#     descartes 
#     cython 
#     geopandas
#     geoplot


# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = >=3.6.*

[options.packages.find]
where = src
exclude =
    tests


[options.entry_points]
# Add here console scripts like:
console_scripts =
    covidify = covidify.cli:cli

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
#     --cov sbdl --cov-report term-missing
    --verbose
    --disable-pytest-warnings
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
package = covidify